--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CaseHistory.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CaseHistory.cshtml
@@ -1,29 +1,29 @@
 ﻿@model CaseHistoryViewModel
 <style>
     .div_hide {
-        display: none
+    display: none
     }
 
     fieldset.scheduler-border {
-        border: 1px groove #ddd !important;
-        padding: 0 1.4em 1.4em 1.4em !important;
-        margin: 0 0 1.5em 0 !important;
-        -webkit-box-shadow: 0px 0px 0px 0px #000;
-        box-shadow: 0px 0px 0px 0px #000;
-        width: 100% !important;
+    border: 1px groove #ddd !important;
+    padding: 0 1.4em 1.4em 1.4em !important;
+    margin: 0 0 1.5em 0 !important;
+    -webkit-box-shadow: 0px 0px 0px 0px #000;
+    box-shadow: 0px 0px 0px 0px #000;
+    width: 100% !important;
     }
 
     legend.scheduler-border {
-        font-size: 1.2em !important;
-        font-weight: bold !important;
-        text-align: left !important;
-        width: auto;
-        padding: 0 10px;
-        border-bottom: none;
+    font-size: 1.2em !important;
+    font-weight: bold !important;
+    text-align: left !important;
+    width: auto;
+    padding: 0 10px;
+    border-bottom: none;
     }
 
     .custom-file-input {
-        opacity: 1 !important;
+    opacity: 1 !important;
     }
 </style>
 <div class="card">
@@ -87,13 +87,13 @@
                         <thead>
                             <tr style="border: 1px solid #ddd;">
                                 <th style="border: 1px solid #ddd; padding: 8px;">Sno.</th>
-                                <th style="border: 1px solid #ddd; padding: 8px;">Type</th>                               
+                                <th style="border: 1px solid #ddd; padding: 8px;">Type</th>
                                 <th style="border: 1px solid #ddd; padding: 8px;">Stage</th>
                                 <th style="border: 1px solid #ddd; padding: 8px;">Next Date</th>
                                 <th style="border: 1px solid #ddd; padding: 8px;">Proceeding</th>
                             </tr>
                         </thead>
-                        <tbody>                            
+                        <tbody>
                             @for (int p = 0; p < Model.ProcHis.Count(); p++)
                             {
                                 <tr style="border: 1px solid #ddd;">
@@ -105,7 +105,7 @@
                                 {
                                     <tr style="border: 1px solid #ddd; background-color: aqua;">
                                         <td style="border: 1px solid #ddd; padding: 8px;">@(i + 1)</td>
-                                        <td style="border: 1px solid #ddd; padding: 8px;">@Model.ProcHis[p].History[i].Type</td>                                        
+                                        <td style="border: 1px solid #ddd; padding: 8px;">@Model.ProcHis[p].History[i].Type</td>
                                         <td style="border: 1px solid #ddd; padding: 8px;">@Model.ProcHis[p].History[i].Stage</td>
                                         <td style="border: 1px solid #ddd; padding: 8px;">@Model.ProcHis[p].History[i].NextDate</td>
                                         <td style="border: 1px solid #ddd; padding: 8px;">@Model.ProcHis[p].History[i].Activity</td>
@@ -118,7 +118,12 @@
                                                 <td colspan="1" style="border: 1px solid #ddd; padding: 8px;">@(k + 1)</td>
                                                 <td colspan="1" style="border: 1px solid #ddd; padding: 8px;">@Model.ProcHis[p].History[i].WorkDetail[j].Works[k].WorkType</td>
                                                 <td colspan="2" style="border: 1px solid #ddd; padding: 8px;">@Model.ProcHis[p].History[i].WorkDetail[j].Works[k].Work</td>
-                                                <td colspan="1" style="border: 1px solid #ddd; padding: 8px;">Last Working Date - @Model.ProcHis[p].History[i].WorkDetail[j].Works[k].Date</td>
+                                                @{
+                                                    string st = @Model.ProcHis[p].History[i].WorkDetail[j].Works[k].Status;
+                                                    string msg = "Work Pending";
+                                                    if (st != "") msg = "Work done";
+                                                }
+                                                <td colspan="1" style="border: 1px solid #ddd; padding: 8px;">Last Working Date - @Model.ProcHis[p].History[i].WorkDetail[j].WorkingDate | @msg</td>
                                             </tr>
                                         }
                                     }
