--- a/CourtApp.Web/Views/Shared/_Scripts.cshtml
+++ b/CourtApp.Web/Views/Shared/_Scripts.cshtml
@@ -21,6 +21,7 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap-multiselect.min.js"></script>
 <script src="~/assets/ckeditor/ckeditor.js"></script>
 <script src="~/js/adminlte.js"></script>
+<script src="~/js/sweetalert2.min.js"></script>
 <script src="~/js/site.js"></script>
 
 @* <script type="importmap">
