--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CaseHistory.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CaseHistory.cshtml
@@ -1,29 +1,29 @@
 ﻿@model CaseHistoryViewModel
 <style>
     .div_hide {
-    display: none
+        display: none
     }
 
     fieldset.scheduler-border {
-    border: 1px groove #ddd !important;
-    padding: 0 1.4em 1.4em 1.4em !important;
-    margin: 0 0 1.5em 0 !important;
-    -webkit-box-shadow: 0px 0px 0px 0px #000;
-    box-shadow: 0px 0px 0px 0px #000;
-    width: 100% !important;
+        border: 1px groove #ddd !important;
+        padding: 0 1.4em 1.4em 1.4em !important;
+        margin: 0 0 1.5em 0 !important;
+        -webkit-box-shadow: 0px 0px 0px 0px #000;
+        box-shadow: 0px 0px 0px 0px #000;
+        width: 100% !important;
     }
 
     legend.scheduler-border {
-    font-size: 1.2em !important;
-    font-weight: bold !important;
-    text-align: left !important;
-    width: auto;
-    padding: 0 10px;
-    border-bottom: none;
+        font-size: 1.2em !important;
+        font-weight: bold !important;
+        text-align: left !important;
+        width: auto;
+        padding: 0 10px;
+        border-bottom: none;
     }
 
     .custom-file-input {
-    opacity: 1 !important;
+        opacity: 1 !important;
     }
 </style>
 <div class="card">
@@ -121,9 +121,11 @@
                                                 @{
                                                     string st = @Model.ProcHis[p].History[i].WorkDetail[j].Works[k].Status;
                                                     string msg = "Work Pending";
-                                                    if (st != "") msg = "Work done";
+                                                    string dt = @Model.ProcHis[p].History[i].WorkDetail[j].Works[k].Date;
+                                                    if (st != "") msg = st;
+                                                    if (dt != null) msg += " on " + dt;
                                                 }
-                                                <td colspan="1" style="border: 1px solid #ddd; padding: 8px;">Last Working Date - @Model.ProcHis[p].History[i].WorkDetail[j].WorkingDate | @msg</td>
+                                                <td colspan="1" style="border: 1px solid #ddd; padding: 8px;">Last Working Date - @Model.ProcHis[p].History[i].WorkDetail[j].WorkingDate | @msg </td>
                                             </tr>
                                         }
                                     }
