--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_AgainstCaseDetail.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_AgainstCaseDetail.cshtml
@@ -212,7 +212,7 @@
                 <div class="input-group">
                     <select class="form-control select2bs4"
                             id="AgCadreId"
-                            asp-for="AgainstCaseDetails[0].Cadre" 
+                            asp-for="AgainstCaseDetails[0].CadreId" 
                             asp-items="@Model.AgainstCaseDetails[0].ACadres">
                         <option></option>
                     </select>
