--- a/CourtApp.Web/Views/Shared/_Scripts.cshtml
+++ b/CourtApp.Web/Views/Shared/_Scripts.cshtml
@@ -24,17 +24,17 @@
 <script src="~/js/sweetalert2.min.js"></script>
 <script src="~/js/site.js"></script>
 
-@* <script type="importmap">
+<script type="importmap">
     {
         "imports": {
-            "ckeditor5": "../../assets/vendor/ckeditor5.js",
-            "ckeditor5/": "../../assets/vendor/"
+            @* //"ckeditor5": "../../assets/vendor/ckeditor5.js", *@
+            @* "ckeditor5/": "../../assets/vendor/" *@
             "ckeditor5": "https://cdn.ckeditor.com/ckeditor5/43.1.0/ckeditor5.js",
             "ckeditor5/": "https://cdn.ckeditor.com/ckeditor5/43.1.0/"
         }
     }
-</script> *@
-@* <script type="module">
+</script>
+<script type="module">
     import {
         ClassicEditor,
         Essentials,
@@ -72,4 +72,4 @@
         .catch(error => {
             console.error(error);
         });
-</script> *@
+</script>
