--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_ViewAll.cshtml
@@ -33,7 +33,10 @@
                     @bt.No
                 </td>
                 <td>
-                    @bt.Year
+                    @if (bt.Year != "0")
+                    {
+                        @bt.Year
+                    }
                 </td>
                 <td>
                     @bt.CaseDetail
@@ -46,19 +49,49 @@
                     @if (bt.NextDate != "01/01/0001")
                         @bt.NextDate
 
+
+
+
+
+
+
+
                 </td>
-                <td>
+                <td text-right">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Action
+                        </button>
+                        <div class="dropdown-menu shadow animated--grow-in">
+                            <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@bt.Id', 'See History')"
+                               class="dropdown-item" title="See History"><i class="fa fa-history"></i>  History</a>
+                            <a onclick="jQueryModalGet('/Litigation/casemanage/GetFileUploadModel?CaseId=@bt.Id', 'Upload Document')"
+                               class="dropdown-item" title="Upload Document"><i class="fas fa-file-alt"></i>  Upload Document</a>
+                            <a asp-area="Litigation" asp-controller="casemanage" asp-action="GetCaseDetail"
+                               asp-route-id="@bt.Id" class="dropdown-item" title="View Case Detail"><i class="fa fa-eye"></i>  Case Detail</a>
+                            @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Cases.Delete)).Result.Succeeded)
+                            {
+                                <form id="form_delete_@bt.Id" asp-area="Litigation"
+                                      asp-controller="casemanage" method="post"
+                                      asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
+                                    <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i>  Delete</a>
+                                </form>
+                            }
+                        </div>
+                    </div>
+                </td>
+                @* <td>
                     <a onclick="jQueryModalGet('/Litigation/casemanage/OnGetCaseHistory?CaseId=@bt.Id', 'See History')" class="fa fa-history" title="See History"></a>
                     <a onclick="jQueryModalGet('/Litigation/casemanage/GetFileUploadModel?CaseId=@bt.Id', 'Upload Document')" class="fa fa-file" title="Upload Document"></a>
                     <a asp-area="Litigation" asp-controller="casemanage" asp-action="GetCaseDetail" asp-route-id="@bt.Id" class="fa fa-eye" title="View Case Detail"></a>
-
-                </td>
+                </td> *@
             </tr>
         }
     </tbody>
 </table>
-<script>    
+<script>
+
     $(document).ready(function () {
-        JqueryDataTable('tblUserCase','User Data List','0,1,2,3,4,5,6,7');        
+        JqueryDataTable('tblUserCase','User Data List','0,1,2,3,4,5,6,7');
     });
 </script>
