--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_ViewAll.cshtml
@@ -69,7 +69,47 @@
     </ul>
 </nav> *@
 <script>
-    $(document).ready(function () {
-        $("#tblProceedingSHead").DataTable();
+    // $(document).ready(function () {
+    //     $("#tblProceedingSHead").DataTable();
+    // });
+    //     $(document).on('click', '.pagination a', function (event) {
+    //     event.preventDefault();
+    //     var url = $(this).attr('href');
+    //     $.get(url, function (data) {
+    //         $('#tblProceedingSHead').html($(data).find('#tblProceedingSHead').html());
+    //         $('.pagination').html($(data).find('.pagination').html());
+    //     });
+    // });
+        $(document).ready(function () {
+            debugger;
+        $("#tblProceedingSHead").DataTable({
+            "processing": true,
+            "serverSide": true,
+            "ajax": {
+                "url": "/LawyerDiary/ProceedingSubHead/LoadAll", // Your server-side endpoint
+                "type": "POST"
+            },
+            "columns": [
+                { "data": "Head" },
+                { "data": "Name_En" },
+                { "data": "Name_Hn" },
+                {
+                    "data": null,
+                    "render": function (data, type, row) {
+                        var actions = '<div class="btn-group">';
+                        actions += '<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action</button>';
+                        actions += '<div class="dropdown-menu shadow animated--grow-in">';
+                        if (data.CanEdit) {
+                            actions += '<a onclick="jQueryModalGet(\'/LawyerDiary/ProceedingSubHead/OnGetCreateOrEdit?id=' + row.Id + '\',\'Edit Proceeding Sub Head Type\')" class="dropdown-item"><i class="fas fa-pencil-alt"></i> Edit</a>';
+                        }
+                        if (data.CanDelete) {
+                            actions += '<a href="javascript:$(\'#form_delete_' + row.Id + '\').submit();" class="dropdown-item"><i class="fas fa-trash-alt"></i> Delete</a>';
+                        }
+                        actions += '</div></div>';
+                        return actions;
+                    }
+                }
+            ]
+        });
     });
 </script>
