--- a/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/Index.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseInfoPrinting/Index.cshtml
@@ -12,7 +12,7 @@
 
     .a4-size {
         width: 210mm;
-        height: 297mm;        
+        height: 297mm;
     }
 </style>
 @model FmpViewModel
@@ -37,8 +37,19 @@
                     <div class="card-body d-flex flex-column">
                         <div class="px-0 py-0">
                             <div class="global-font pt-1 px-0">
+                                Select Form Type
+                                (<span style="color:red">*</span>)
+                            </div>
+                            <div style="width:230px!important">
+                                <select class="form-control select2bs4" asp-for="@Model.FormTypeId" asp-items="@Model.FormTypes">
+                                    <option></option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="px-0 py-0">
+                            <div class="global-font pt-1 px-0">
                                 Select Cases
-                                <span class="global-font-error">*</span>
+                                (<span style="color:red">*</span>)
                             </div>
                             <div>
                                 <select class="form-control select2bs4" asp-for="@Model.CaseIds" asp-items="@Model.Cases">
@@ -49,7 +60,7 @@
                         <div class="px-0 py-0">
                             <div class="global-font pt-1 px-0">
                                 Select Title
-                                <span class="global-font-error">*</span>
+
                             </div>
                             <div>
                                 <select class="form-control select2bs4" asp-for="@Model.TitleIds" asp-items="@Model.Titles">
@@ -57,17 +68,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="px-0 py-0">
-                            <div class="global-font pt-1 px-0">
-                                Form Type
-                                <span class="global-font-error">*</span>
-                            </div>
-                            <div style="width:230px!important">
-                                <select class="form-control select2bs4" asp-for="@Model.FormTypeId" asp-items="@Model.FormTypes">
-                                    <option></option>
-                                </select>
-                            </div>
-                        </div>                        
+
                         <br />
                         <div class="px-0 py-0">
                             <a id="btnSearch" class="btn bg-success">
@@ -81,7 +82,6 @@
 
                     </div>
                     <div class="card-footer">
-                        
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
 
 
 
-            $("#btnPrint").click(function () {                
+            $("#btnPrint").click(function () {
                 printData();
             })
             function printData() {
@@ -143,10 +143,21 @@
             });
 
             $("#btnSearch").on("click", function () {
+               
                 var t = $("#FormTypeId").val();
                 var v = $("#CaseIds").val();
-                var title = $("#TitleIds").val();               
-                loadData(t, v,title);
+                var title = $("#TitleIds").val();
+                if(t && v){
+                    loadData(t, v,title);
+                }
+                else
+                {
+                    Swal.fire({
+                        title: "Please select the form type or case for generating the report!",
+                        text: "error",
+                        icon: "error"
+                    });
+                }
             });
 
 
