--- a/CourtApp.Web/Areas/Admin/Views/TemplateBuilder/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Admin/Views/TemplateBuilder/_CreateOrEdit.cshtml
@@ -5,19 +5,23 @@
 
 <style>
     .main-container {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .ck-editor__editable {
-    min-height: 300px;
-    max-height: 300px;
+        min-height: 300px;
+        max-height: 300px;
     }
 
 </style>
 @model TemplateViewModel
-<form id="create-form" method="post" asp-controller="TemplateBuilder" asp-action="OnPostCreateOrEdit" asp-route-Id="@Model.Id" enctype="multipart/form-data">
+<form id="frmTemplateBuilder" method="post" asp-controller="TemplateBuilder"
+      asp-action="OnPostCreateOrEdit"
+      asp-route-Id="@Model.Id"
+      enctype="multipart/form-data">
+    <input type="hidden" id="hdnId" asp-for="@Model.Id" value="@Model.Id" />
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
@@ -45,7 +49,7 @@
         </div>
     </div>
 
-    <div class="form-group justify-content-between" style="margin-bottom: 0px !important">       
+    <div class="form-group justify-content-between" style="margin-bottom: 0px !important">
         <button type="submit" class="btn btn-success">@ViewBag.BtText</button>
         <input type="button" class="btn btn-default close-button" id="btnReset" value="Reset" data-dismiss="modal"></button>
     </div>
@@ -54,13 +58,37 @@
 {
     <script src="~/assets/ckeditor/ckeditor.js"></script>
     <script>
-        $(document).ready(function(){
+            $(document).ready(function(){
                 CKEDITOR.replace('TemplateBody');
-                    $("#btnReset").on('click', function () {
-                    CKEDITOR.instances['TemplateBody'].setData();
-                $("#TemplateName").val('');
-
+                        $("#btnReset").on('click', function () {
+                        CKEDITOR.instances['TemplateBody'].setData();
+                    $("#TemplateName").val('');
+                });
             });
+
+            $(document).ready(function() {
+            // $('#frmTemplateBuilder').submit(function(event) {
+            //     event.preventDefault(); // Prevent the form from submitting the default way
+            //     debugger;
+            //     var formData = $(this).serialize(); // Serialize form data
+            // var id = $("#hdnId").val(); // Replace with actual way to get ID if it's dynamic
+            // console.log($("#hdnId").val());
+            //     $.ajax({
+            //         type: 'POST',
+            //         url: '/Admin/TemplateBuilder/OnPostCreateOrEdit?id=' + id, // Adjust the URL accordingly
+            //         data: formData, // Serialize form data
+            //         success: function(response) {
+            //             if (response.success) {
+            //                 Swal.fire('Success', response.message, 'success');
+            //             } else {
+            //                 Swal.fire('Error', response.message, 'error');
+            //             }
+            //         },
+            //         error: function() {
+            //             Swal.fire('Error', 'An unexpected error occurred.', 'error');
+            //         }
+            //     });
+            // });
         });
     </script>
 }
